IVI-41: Сделать документацию к API более подробной
