# internal/stream/delivery/dto.go
@@ -3,8 +3,8 @@ package delivery
 import "gitlab.teamdev.huds.su/bivi/backend/internal/models"
 
 type QualityDTO struct {
-	Height               uint `json:"height,omitempty"`
-	PreferredPeakBitrate uint `json:"preferredPeakBitRate,omitempty"`
+	Height               uint `example:"720"     json:"height,omitempty"`
+	PreferredPeakBitrate uint `example:"4200000" json:"preferredPeakBitRate,omitempty"`
 }
 
 type QualitiesDTO struct {
